add two switch to avoid noise

--- a/src/main/resources/plugin.properties
+++ b/src/main/resources/plugin.properties
@@ -1,7 +1,7 @@
 alerter.name=azkaban-feishu-alerter
 alerter.class=com.github.twoyang0917.FeishuAlerter
 
-# ?????? Webhook URL
+feishu.enabled=true
+feishu.alertSuccess=false
 feishu.webhookUrl=https://open.feishu.cn/open-apis/bot/v2/hook/******
-# ????????????
 azkaban.urlPrefix=https://azkaban.example.com
