send alert to different webhook base on matched regex of projectName

--- a/src/main/resources/plugin.properties
+++ b/src/main/resources/plugin.properties
@@ -3,5 +3,10 @@ alerter.class=com.github.twoyang0917.FeishuAlerter
 
 feishu.enabled=true
 feishu.alertSuccess=false
-feishu.webhookUrl=https://open.feishu.cn/open-apis/bot/v2/hook/******
+feishu.defaultWebhookUrl=https://open.feishu.cn/open-apis/bot/v2/hook/******
+rule.names=ai,das
+rule.ai.regex=.*ai[-_].*
+rule.ai.webhookUrl=https://open.feishu.cn/open-apis/bot/v2/hook/******
+rule.das.regex=^DAS_.*
+rule.das.webhookUrl=https://open.feishu.cn/open-apis/bot/v2/hook/******
 azkaban.urlPrefix=https://azkaban.example.com
