notify to persons base on project name

--- a/src/main/resources/plugin.properties
+++ b/src/main/resources/plugin.properties
@@ -1,12 +1,22 @@
 alerter.name=azkaban-feishu-alerter
 alerter.class=com.github.twoyang0917.FeishuAlerter
 
+azkaban.urlPrefix=https://azkaban.example.com
 feishu.enabled=true
 feishu.alertSuccess=false
 feishu.defaultWebhookUrl=https://open.feishu.cn/open-apis/bot/v2/hook/******
-rule.names=ai,das
-rule.ai.regex=.*ai[-_].*
-rule.ai.webhookUrl=https://open.feishu.cn/open-apis/bot/v2/hook/******
-rule.das.regex=^DAS_.*
-rule.das.webhookUrl=https://open.feishu.cn/open-apis/bot/v2/hook/******
-azkaban.urlPrefix=https://azkaban.example.com
+feishu.defaultNotifyPersons=fox@example.com,tiger@example.com
+
+rule.webhook.name=ai,das
+rule.webhook.ai.regex=.*ai[-_].*
+rule.webhook.ai.url=https://open.feishu.cn/open-apis/bot/v2/hook/******
+rule.webhook.das.regex=^DAS_.*
+rule.webhook.das.url=https://open.feishu.cn/open-apis/bot/v2/hook/******
+
+rule.notify.name=clued,ai,mainland
+rule.notify.mainland.regex=.*mainland.*
+rule.notify.mainland.persons=twoyang@example.com,tiger@example.com
+rule.notify.clued.regex=^prod-clued.*
+rule.notify.clued.persons=twoyang@example.com,fox@example.com
+rule.notify.ai.regex=.*ai[-_].*
+rule.notify.ai.persons=
